--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -7,7 +7,7 @@
 
   <!-- Header -->
   <div
-      class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
+      class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pb-4">
       <!-- Loader -->
       <div
           class="absolute inset-x-0 bottom-0"
