--- a/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
+++ b/src/app/modules/user-management/activity/activity-edit/activity-form.dialog.component.html
@@ -18,25 +18,25 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 3%;">
-            <div class="col-lg-3 kt-margin-bottom-20-mobile">
-              <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
+              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <input matInput placeholder="Enter Page Name" formControlName="ActivityName" maxlength="30"
                        autocomplete="off"/>
                 <mat-error *ngIf="hasError('ActivityName', 'required')">Name <strong>required</strong></mat-error>
                 <mat-hint align="start">Please enter <strong>Page Name</strong></mat-hint>
               </mat-form-field>
             </div>
-            <div class="col-lg-3 kt-margin-bottom-20-mobile">
+            <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
 
-              <mat-form-field class="mat-form-field-fluid" appearance="outline">
+              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label for="ActivityUrl">Enter URL</mat-label>
 
                 <input matInput placeholder="Enter URL" formControlName="ActivityUrl" maxlength="60"
                        autocomplete="off"/>
               </mat-form-field>
             </div>
-            <div class="col-lg-3 kt-margin-bottom-20-mobile" *ngIf="!isVisible">
-              <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile" *ngIf="!isVisible">
+              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label for="PageIcon">Enter Icon</mat-label>
                 
                 <input matInput placeholder="Enter Page Icon" formControlName="PageIcon" maxlength="60"
@@ -45,7 +45,7 @@
 
               </mat-form-field>
             </div>
-            <div class="col-lg-3 kt-margin-bottom-20-mobile" *ngIf="isVisible">
+            <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile" *ngIf="isVisible">
               <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <input matInput placeholder="Enter Tag" formControlName="TagName" maxlength="60"
                        autocomplete="off"/>
@@ -53,13 +53,13 @@
             </div>
             <div style="display: flex;flex-direction: column">
 
-              <div class="col-lg-3 kt-margin-bottom-20-mobile" style="margin-top: 15px">
+              <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile" style="margin-top: 15px">
                 <mat-checkbox style="margin-top: 15px;" formControlName="IsParent"
                               [checked]="this.data.activity.isParent"
                               (change)="showOrHide($event)"><span>Is Parent?</span>
                 </mat-checkbox>
               </div>
-              <div class="col-lg-3 kt-margin-bottom-20-mobile mb-3" style="margin-top: 15px">
+              <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile mb-3" style="margin-top: 15px">
                 <mat-checkbox style="margin-top: 15px;" formControlName="IsActive"
                               [checked]="this.data.activity.isActive"
                               ><span>Is Active?</span>
@@ -79,7 +79,7 @@
             </div>
 
             <div class="form-group kt-form__group row">
-              <div class="col-lg-4 mt-2 kt-margin-bottom-20-mobile">
+              <div class="col-lg-4 col-sm-12 mt-2 kt-margin-bottom-20-mobile">
                 <mat-form-field class="mat-form-field-fluid" appearance="outline">
                   <mat-label>Parent</mat-label>
                   <mat-select formControlName="ParentActivityID" name="ParentActivityID">
