--- a/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
+++ b/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
@@ -1,8 +1,12 @@
 <div class=" px-4  kt-portlet"
      [ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }">
     <div class="kt-portlet__head kt-portlet__head__custom">
-        <div class="kt-portlet__head-label">
-            <h3 class="kt-portlet__head-title text-xl font-bold py-4">{{getTitle()}}</h3>
+        <div class="kt-portlet__head-label flex">
+            <h3 class=" w-full text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">{{getTitle()}}</h3>
+            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md ml-4 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
+            [mat-dialog-close]="false">
+            <mat-icon class="mr-2">cancel</mat-icon>Cancel
+          </button>
         </div>
 
 
@@ -23,12 +27,7 @@
             <mat-icon class="mr-2">delete_forever</mat-icon> Delete
             </button>
           </div>
-          <div class="col-lg-3 col-sm-12">
-            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
-            [mat-dialog-close]="false">
-            <mat-icon class="mr-2">cancel</mat-icon>Cancel
-          </button>
-          </div>
+
           <div class="col-lg-3 col-sm-12">
             <button *ngIf="isClearBtnShown" type="button" class="btn btn-primary" mat-raised-button color="primary"
             (click)="Clear()" [disabled]="viewLoading || submitted">
@@ -44,8 +43,8 @@
       </div>
 
       <div class="row py-2">
-        <div class="col-lg-12 text-right flex place-content-end">
-          <h5 class="mr-5 ml-5 mt-3"><span class="map-circle-1 mr-2"> </span>Add</h5>
+        <div class="col-lg-12  flex ">
+          <h5 class="mr-5 mt-3"><span class="map-circle-1 mr-2"> </span>Add</h5>
 
 
           <h5 class="mr-5 mt-3"><span class="map-circle-2 mr-2"> </span>Edit</h5>
