--- a/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
+++ b/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
@@ -1,4 +1,6 @@
 <form [formGroup]="documentTypeForm" class="kt-form kt-form--group-seperator-dashed">
+    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Edit Page</div>
+
     <div class="row">
         <div class="col-lg-6 col-sm-12">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
