--- a/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
+++ b/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
@@ -17,7 +17,7 @@
             <mat-icon class="mr-2">edit</mat-icon> Edit
             </button>
 
-            <button *ngIf="isDeleteBtnShown && _currentActivity.D" type="button" class=" mx-2 btn btn-primary"
+            <button *ngIf="isDeleteBtnShown && _currentActivity.D" type="button" class=" mx-2 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
             mat-raised-button color="primary" (click)="DeeteCircleFence()"
             [disabled]="viewLoading || submitted">
             <mat-icon class="mr-2">delete_forever</mat-icon> Delete
@@ -37,7 +37,7 @@
           </div>
       </div>
 
-      <div class="row pb-3">
+      <!-- <div class="row pb-3">
         <div class="col-lg-12  flex " style="color: #01671B;">
           <h5 class="mr-5 mt-3"><span class="map-circle-1 mr-2"> </span>Add</h5>
 
@@ -48,7 +48,7 @@
 
           <h5 class="mr-5 mt-3"><span class="map-circle-3 mr-2"> </span>View</h5>
         </div>
-      </div>
+      </div> -->
 
     </div>
     <form class="kt-form kt-form--group-seperator-dashed">
