--- a/src/app/shared/crud/alert-message/alert-message.component.html
+++ b/src/app/shared/crud/alert-message/alert-message.component.html
@@ -5,7 +5,7 @@
 			<div class="form-group">
 
 				<div class="col-lg-12 text-center mt-1">
-					<img src="./assets/media/icons/confirmation.jpg" class="img-responsive center-block" alt="icon" />
+					<img src="./assets/media/icons/confirmation.jpg" class="img-responsive center-block w-32 mx-auto" alt="icon" />
 				</div>
 
 				<div class="col-lg-12 text-center mt-5">
@@ -14,7 +14,7 @@
 			</div>
 			</div>
 			<div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
-				<div class="kt-form__actions kt-form__actions--sm">
+				<div class="kt-form__actions kt-form__actions--sm  mt-4">
 					<!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
 					<button mat-button (click)="onNoClick()" class="btn btn-success btn-block" color="primary" cdkFocusInitial [disabled]="viewLoading">OK</button>
 				</div>
