--- a/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
@@ -114,7 +114,7 @@
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Vendor Name</mat-label>
                         <input matInput placeholder="Vendor Name" formControlName="Name" maxlength="30"
-                               autocomplete="off" appNumberOnly/>
+                               autocomplete="off"/>
                     </mat-form-field>
                 </div>
             </div>
