--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -107,97 +107,85 @@
         type="button" (click)="searchVendor()"><mat-icon class="mr-2 ">search</mat-icon> Search</button>
 </div>
 </div>
-
-
-
-
-
-
-
-
-
-    </div>
-    <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
-        <div class="example-table-container">
-            <table mat-table
-                   [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} "
-                   class="example-table"
-                   matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
-                <!-- Number Column -->
-                <ng-container matColumnDef="Name">
-                    <th mat-header-cell *matHeaderCellDef>Name</th>
-                    <td mat-cell *matCellDef="let vendor">{{vendor.Name}}</td>
-                </ng-container>
-
-                <!-- Title Column -->
-                <ng-container matColumnDef="bDescription">
-                    <th mat-header-cell *matHeaderCellDef>Branch Code</th>
-                    <td mat-cell *matCellDef="let vendor">{{vendor.Description}}</td>
-                </ng-container>
-
-                <!-- State Column -->
-                <ng-container matColumnDef="Address">
-                    <th mat-header-cell *matHeaderCellDef>Address</th>
-                    <td mat-cell *matCellDef="let vendor">{{vendor.Address}}</td>
-                </ng-container>
-
-                <!-- State Column -->
-                <ng-container matColumnDef="Type">
-                    <th mat-header-cell *matHeaderCellDef>Type</th>
-                    <td mat-cell *matCellDef="let vendor">{{vendor.TypeName}}</td>
-                </ng-container>
-
-                <!-- State Column -->
-                <ng-container matColumnDef="Phone">
-                    <th mat-header-cell *matHeaderCellDef>Phone</th>
-                    <td mat-cell *matCellDef="let vendor">{{vendor.PhoneNumber}}</td>
-                </ng-container>
-
-                <ng-container matColumnDef="Actions">
-                    <th mat-header-cell *matHeaderCellDef>Actions</th>
-                    <td mat-cell *matCellDef="let vendor">
-                        <button mat-icon-button color="primary" (click)="viewVendor(vendor)">
-                            <mat-icon title="View Vendor" color="primary">visibility</mat-icon>
-                        </button>
-
-                        <button mat-icon-button color="primary" *ngIf="editDeleteStatus(vendor)" (click)="editVendor(vendor)">
-                            <mat-icon title="View Vendor">edit</mat-icon>
-                        </button>
-
-                        <button mat-icon-button *ngIf="editDeleteStatus(vendor)" (click)="deleteVendor(vendor)">
-                            <mat-icon title="View Vendor" class="text-red-500">delete_forever</mat-icon>
-                        </button>
-                    </td>
-                </ng-container>
-
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-
-            <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
-                Items per page:
-                <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
-                            style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-                    <mat-option [value]="5">5</mat-option>
-                    <mat-option [value]="10">10</mat-option>
-                    <mat-option [value]="25">25</mat-option>
-                    <mat-option [value]="50">50</mat-option>
-                    <mat-option [value]="1000">1000</mat-option>
-                </mat-select>
-                <button (click)="paginate(1)">First</button>
-                <pagination-controls class="mt-4" display="inline" (pageChange)="paginate($event)"
-                                     style="display: inline-block;"></pagination-controls>
-                <button (click)="paginate(MathCeil(totalItems/itemsPerPage))">Last</button>
-                <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
-
-            </div>
-
-
-            <!-- <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>
-            <div class="mat-table__message" *ngIf="loading">Please wait....</div> -->
-
-        </div>
-
-    </div>
 </div>
+
+<div class="mat-table__wrapper mat-elevation-z8">
+    <!--[style.height]="gridHeight"-->
+    <mat-table class="lmat-elevation-z8"
+               #table
+               [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
+               matSort
+               #sort1="matSort"
+               matSortActive="id"
+               matSortDirection="asc"
+               matSortDisableClear>
+      <ng-container matColumnDef="Name">
+        <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+        <mat-cell *matCellDef="let vendor">{{vendor.Name}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="bDescription">
+        <mat-header-cell *matHeaderCellDef>Business Description</mat-header-cell>
+        <mat-cell *matCellDef="let vendor">{{vendor.Description}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Address">
+        <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>
+        <mat-cell *matCellDef="let vendor">{{vendor.Address}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="Type">
+        <mat-header-cell *matHeaderCellDef>Type</mat-header-cell>
+        <mat-cell *matCellDef="let vendor">{{vendor.TypeName}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="Phone">
+        <mat-header-cell *matHeaderCellDef>Phone Number</mat-header-cell>
+        <mat-cell *matCellDef="let vendor">{{vendor.PhoneNumber}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="Actions">
+        <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+        <mat-cell mat-cell *matCellDef="let vendor">
+            <button mat-icon-button color="primary" (click)="viewVendor(vendor)">
+                <mat-icon title="View Vendor" color="primary">visibility</mat-icon>
+            </button>
+    
+            <button mat-icon-button color="primary" *ngIf="editDeleteStatus(vendor)" (click)="editVendor(vendor)">
+                <mat-icon title="View Vendor">edit</mat-icon>
+            </button>
+    
+            <button mat-icon-button *ngIf="editDeleteStatus(vendor)" (click)="deleteVendor(vendor)">
+                <mat-icon title="View Vendor" class="text-red-500">delete_forever</mat-icon>
+            </button>
+        </mat-cell>
+    </ng-container>
+
+
+      <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background"></mat-header-row>
+
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+    </mat-table>
+
+    <div class="mat-table__message" *ngIf="!loading && !matTableLenght">Please select Zone and Branch</div>
+    <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+
+    <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+      Items per page:
+      <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)" style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+        <mat-option [value]="5">5</mat-option>
+        <mat-option [value]="10">10</mat-option>
+        <mat-option [value]="25">25</mat-option>
+        <mat-option [value]="50">50</mat-option>
+      </mat-select>
+      <button (click)="paginate(1)">First</button>
+      <pagination-controls display="inline" (pageChange)="paginate($event)" style="display: inline-block;"></pagination-controls>
+      <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+      <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+
+    </div> 
+
+  </div>
+
+</div>
+
+
