--- a/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
+++ b/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
@@ -1,12 +1,12 @@
-<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 bg-card dark:bg-transparent">
-
+<div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 bg-card dark:bg-transparent">
+    <div class=" mt-4 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">View Map</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4"
+    <div class=" py-2"
     >
-        <div class="text-4xl font-extrabold tracking-tight">View Map</div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" style="flex-wrap: wrap;
-    gap: 20px;">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
+    
+    <div class="row">
+        <div class="col-lg-4 col-sm-12">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
                 <mat-label>Zone</mat-label>
                 <mat-select (selectionChange)="GetBranches($event)" [(ngModel)]="zoneInitial">
                     <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
@@ -14,8 +14,9 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
+        </div>
+        <div class="col-lg-4 col-sm-12">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
                 <mat-label>Branch</mat-label>
                 <mat-select (selectionChange)="loadCirclesSinglePoints($event)" [(ngModel)]="branchInitial">
                     <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
@@ -24,6 +25,9 @@
                 </mat-select>
             </mat-form-field>
         </div>
+    </div>
+        
+
     </div>
 
     <!-- Main -->
