--- a/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
+++ b/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
@@ -12,8 +12,8 @@
             </thead>
             <tbody>
             <tr>
-                <td class="text-black"> {{RequestResponse.Request}}</td>
-                <td class="text-black">{{RequestResponse.Response}}</td>
+                <td class="text-black w-56"> <div class="w-96 break-words">{{RequestResponse.Request}}</div> </td>
+                <td class="text-black w-56"><div class="w-96 break-words">{{RequestResponse.Response}}</div></td>
             </tr>
             </tbody>
         </table>
