--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -86,7 +86,7 @@
         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Vendor Name</mat-label>
             <input matInput placeholder="Vendor Name" formControlName="VendorName" maxlength="30"
-                   autocomplete="off" appNumberOnly/>
+                   autocomplete="off"/>
         </mat-form-field>
     </div>
     <div class="col-lg-4">
