--- a/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
+++ b/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
@@ -1,4 +1,4 @@
-<h3 class="kt-portlet__head-title text-xl py-4 border-b">Api Log({{RequestResponse.APIName}})</h3>
+<h3 class="text-3xl  mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Api Log({{RequestResponse.APIName}})</h3>
 
 
 <div class="row">
